--- a/app/assets/stylesheets/survey.scss
+++ b/app/assets/stylesheets/survey.scss
@@ -3,9 +3,10 @@ div.option-img-wrapper, div.option-field-value-wrapper, div.option-caption-wrapp
 img.option-img, div.option-field-value-wrapper, div.option-caption-wrapper { cursor: pointer; }
 
 div.option-field-value-wrapper { font-weight: bold; text-transform: uppercase; }
-.gumdrop img.option-img { height: 100px; width: 100px; border: solid 4px #ccc; }
+.gumdrop img.option-img { height: 100px; width: 100px; border: solid 4px #ccc; -webkit-filter: grayscale(100%); filter: grayscale(100%); }
 .gumdrop input[type=text] { border: solid 4px #ccc; }
 
-.gumdrop > div + div > input[type=radio]:checked + label img.option-img { border: solid 4px #FF8C00; }
+input.placeholder[type=radio]:checked ~ .gumdrop img.option-img { -webkit-filter: grayscale(0%); filter: grayscale(0%); }
+.gumdrop > div + div > input[type=radio]:checked + label img.option-img { border: solid 4px #FF8C00; -webkit-filter: grayscale(0%); filter: grayscale(0%); }
 .gumdrop > div + div > input[type=radio]:checked + label input[type=text] { border: solid 4px #FF8C00; }
 div.gumdrop > div + div > input[type=radio] { display: none; }
